--- a/client/thirdweb-app/package.json
+++ b/client/thirdweb-app/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2"
   },
   "devDependencies": {
+    "@types/react": "18.2.21",
     "autoprefixer": "^10.4.15",
     "eslint": "8.11.0",
     "eslint-config-next": "^13",
