--- a/client/thirdweb-app/package.json
+++ b/client/thirdweb-app/package.json
@@ -16,7 +16,8 @@
     "ethers": "^5.7.2",
     "next": "^13",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "18.2.21",
