--- a/client/thirdweb-app/package.json
+++ b/client/thirdweb-app/package.json
@@ -11,6 +11,7 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@thirdweb-dev/auth": "^3.2.40",
     "@thirdweb-dev/react": "^3.14.40",
     "@thirdweb-dev/sdk": "^3.10.59",
     "ethers": "^5.7.2",
